--- a/server/app/package.json
+++ b/server/app/package.json
@@ -11,6 +11,7 @@
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-convert": "^1.2.0",
+    "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.0.0",
     "koa-onerror": "^3.1.0",
