--- a/server/app/package.json
+++ b/server/app/package.json
@@ -13,11 +13,11 @@
     "koa-convert": "^1.2.0",
     "koa-cors": "0.0.16",
     "koa-json": "^2.0.2",
-    "koa-logger": "^3.0.0",
     "koa-onerror": "^3.1.0",
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
-    "koa-views": "^6.0.2"
+    "koa-views": "^6.0.2",
+    "log4js": "^3.0.5"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
