--- a/server/app/package.json
+++ b/server/app/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "debug": "~2.6.8",
     "hjs": "~0.0.6",
     "koa": "^2.3.0",
@@ -17,7 +18,8 @@
     "koa-router": "^7.2.1",
     "koa-static": "^3.0.0",
     "koa-views": "^6.0.2",
-    "log4js": "^3.0.5"
+    "log4js": "^3.0.5",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
