--- a/server/app/package.json
+++ b/server/app/package.json
@@ -19,6 +19,7 @@
     "koa-static": "^3.0.0",
     "koa-views": "^6.0.2",
     "log4js": "^3.0.5",
+    "moment": "^2.24.0",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
